[package]
name = "gh-repo-healthchecks"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = "0.44.1"
ratatui = "0.29.0"
crossterm = "0.28.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
